Add a test to better understand how stopwords influence the tagging result.